fixed footer bar so it doesn't overlap content, also restyled some the login/register pages

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -1,6 +1,11 @@
 div{
   font-family: 'Raleway', sans-serif;
+}
 
+.loginregrow {
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 #main-col-1 {
